<resources>
    <string name="app_name">Air tickets</string>
    <string name="tickets">Авиабилеты</string>
    <string name="hotels">Отели</string>
    <string name="in_short">Короче</string>
    <string name="subscriptions">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="search_air_tickets">Поиск дешевых авиабилетов</string>
    <string name="fly_away_musically">Музыкально отлететь</string>
    <string name="hint_to">Куда - Турция</string>
    <string name="hint_from">Откуда - Москва</string>
    <string name="price_from">от 0 ₽</string>
    <string name="city">Санкт-Петербург</string>
    <string name="artist_name">Sample Title</string>
    <string name="airplane_icon">airplane icon</string>
    <string name="artist_photo">artist photo</string>
    <string name="search_icon">search icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="handle">handle</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="weekend">Выходные</string>
    <string name="anywhere">Куда угодно</string>
    <string name="difficult_route">Сложный маршрут</string>
    <string name="istanbul">Стамбул</string>
    <string name="popular_destination">Популярное направление</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="back">обратно</string>
    <string name="ticket_type">1,эконом</string>
    <string name="filters">фильтры</string>
    <string name="ural_airlines">Уральские авиалинии</string>
    <string name="ticket_price">2 390 ₽</string>
    <string name="flight_times">07:00 09:10 10:00 11:00</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="pobeda">Победа</string>
    <string name="nordstar">NordStar</string>
    <string name="view_all_tickets">Посмотреть все билеты</string>
    <string name="bottom_back">bottom back</string>
    <string name="moskow">Москва</string>
    <string name="search_data">23 февраля</string>
    <string name="date">24 июн</string>
    <string name="filter">Фильтр</string>
    <string name="price_chart">График цен</string>
    <string name="badge_text">Самый удобный</string>
    <string name="aer">AER</string>
    <string name="vko">VKO</string>
    <string name="transfers_info">/ Без пересадок</string>
    <string name="travel_time">4ч в пути</string>
    <string name="_07_10">07:10</string>
    <string name="dash">—</string>
    <string name="splash">-</string>
    <string name="_03_15">03:15</string>
    <string name="previous_screen">previous screen</string>
    <string name="day_of_week">, сб</string>
    <string name="number_of_passengers">, 1 пассажир</string>
    <string name="placeholder">placeholder</string>
    <string name="back2">Назад</string>

</resources>