<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="296dp"
    android:layout_height="90dp"
    android:layout_gravity="center"
    android:background="@android:color/transparent"
    app:cardBackgroundColor="@color/black"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey4">

        <ImageView
            android:id="@+id/search_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/search_icon"
            android:src="@drawable/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:drawablePadding="8dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="@string/hint_from"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@color/grey6"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/line"
            app:layout_constraintStart_toStartOf="@id/line"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/grey5"
            app:layout_constraintBottom_toBottomOf="@id/search_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_icon"
            app:layout_constraintTop_toTopOf="@id/search_icon" />

        <EditText
            android:id="@+id/et_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="@string/hint_to"
            android:inputType="text"
            android:textColor="@android:color/white"
            android:textColorHint="@color/grey6"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>