<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".AllTicketsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/search_data"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@color/grey2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/bottom_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="2dp"
            android:contentDescription="@string/bottom_back"
            android:src="@drawable/back"
            app:tint="@color/blue"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_from_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/from_to"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@id/bottom_back"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_search_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/search_data"
            android:fontFamily="@font/sf_pro_display_medium"
            android:textSize="14sp"
            android:textColor="@color/grey6"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/bottom_back"
            app:layout_constraintTop_toBottomOf="@id/tv_from_to"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_all_tickets_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/search_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="37dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/small_button"
        android:backgroundTint="@color/blue"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    <ImageView
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/filters" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/sf_pro_display_medium"
        android:text="@string/filter"
        android:textColor="@color/white"
        android:textSize="14sp" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/price_chart" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/sf_pro_display_medium"
            android:text="@string/price_chart"
            android:textColor="@color/white"
            android:textStyle="italic"
            android:textSize="14sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>